--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "lucide-react": "^0.562.0",
+    "mongoose": "^9.0.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
