--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "cloudinary": "^1.41.3",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.0.2",
