--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cloudinary": "^1.41.3",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
@@ -20,6 +21,7 @@
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.26.17",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
