--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "sweetalert2": "^11.26.17",
